# omnia-sdk-examples

./: .gitignore  README.md  pyproject.toml
answers_hybrid_bot/: build.yaml  chatbot_configuration.yaml  graph.py
answers_hybrid_bot/chatbot/: main.py
insurance/: chatbot_configuration.yaml  graph.py  translation_table.yaml
insurance/chatbot/: laqo_main.py
insurance/chatbot/ner/: entity_extraction.py  intent.py  travel_insurance.py
omnia_sdk_examples/chatbot/laqo/: chatbot_configuration.yaml  entity_extraction.py  laqo_graph.py  laqo_main.py  localization.py  travel_insurance.py
omnia_sdk_examples/chatbot/omnichannel_bot/: foodie_graph.py  foodie_main.py
omnichannel_bot/: foodie_main.py  graph.py
