[project]
name = "omnia-sdk-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Team42", email = "Team_42@infobip.com"}
]

readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "certifi (>=2025.1.31,<2026.0.0)",
    "omnia-sdk @ git+https://github.com/infobip/omnia-sdk.git@python3-13",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
